# se-toolkit-lab-3

./: pyproject.toml
docs/diagrams/src/uber/: architecture-sequence.puml
lab/: setup.md
lab/appendix/: linux.md
lab/tasks/: setup.md
lab/tasks/optional/: task-1.md
lab/tasks/required/: questionnaire.md  task-1.md  task-2.md  task-3.md
src/app/data/: course_items.json
src/app/routers/: status.py
tests/: test_status.py
