[project]
name = "course-materials-service"
version = "0.1.0"
description = "Course Materials Service"
readme = "README.md"
requires-python = "==3.14.2"
dependencies = [
  "fastapi==0.128.7",
  "httpx==0.28.1",
  "pydantic==2.12.5",
  "pydantic-settings==2.12.0",
  "uvicorn[standard]==0.40.0",
]

[dependency-groups]
dev = [
  "poethepoet>=0.40.0",
  "pyright==1.1.408",
  "pytest==9.0.2",
  "ruff==0.14.14",
  "ty==0.0.13",
  "kport==3.1.1",
]

[tool.ruff.lint]
select = [ "RET503" ]

[tool.poe.tasks]
# Run server

## Check code and run server in dev mode

[tool.poe.tasks.dev]
help = "Run server after static analysis"
sequence = ["check", "dev-unsafe"]

## Run server
[tool.poe.tasks.dev-unsafe]
help = "Run server without static analysis"
cmd = "python src/app/run.py"

# Run static analysis

## Run all tools

[tool.poe.tasks.check]
help = "Format, lint, typecheck"
sequence = ["format", "lint", "typecheck"]

## Typecheck

[tool.poe.tasks.typecheck]
help = "Run all typecheckers"
parallel = ["ty-check", "pyright-check"]

[tool.poe.tasks.ty-check]
help = "Run the 'ty' typechecker"
cmd = "ty check"

[tool.poe.tasks.pyright-check]
help = "Run the 'pyright' typechecker"
cmd = "pyright"

## Lint

[tool.poe.tasks.lint]
help = "Run the 'ruff' linter"
cmd = "ruff check"

## Format

[tool.poe.tasks.format]
help = "Run the 'ruff' formatter"
cmd = "ruff format"

# Run dynamic analysis

## Run tests

[tool.poe.tasks.test]
help = "Run pytest"
cmd = "pytest"

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__"]
strict = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ty.src]
include = ["src", "tests"]
